--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: python
 python:
   - 3.10
+before_install:
+  - python --version
+  - pip install -U pytest
+  - pip install -U sqlalchemy
+  - pip install -U postgres
 script: pytest
 services:
   - docker
